[package]
name = "events"
version = "0.9.0-rc19"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = {workspace = true, optional = true}
cosmwasm-std = { version = "2.1.4" }
cosmwasm-schema = "2.1.4"
cosmos-proto = { path = "../cosmos-proto", optional = true , version = "0.9.0-rc19" }
hex = "0.4.3"
koit-toml = { version = "=0.2.1", optional = true }
opentelemetry = { version = "0.23", features = ["metrics" ], optional = true }
retrying = { version = "0.1.0", features = ["tokio"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = "0.26"
strum_macros = "0.26"
thiserror = { version = "1.0.64", optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tonic = { workspace = true, features = ["transport","tls","tls-roots"], optional = true }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true
tfhe-versionable.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
mockall = "0.13.0"
quickcheck = "1.0.3"
quickcheck_macros = "1"
test-context = "0.3.0"
backward-compatibility = { path = "../../backward-compatibility", version = "0.9.0-rc3" , features = ["load", "tests"] }
kms-common = { path = "../../common", version = "0.9.0-rc19", features = ["testing"] }

[features]
default = []
subscription = [
    "dep:async-trait",
    "dep:cosmos-proto",
    "dep:koit-toml",
    "dep:opentelemetry",
    "dep:retrying",
    "dep:thiserror",
    "dep:tokio",
    "dep:tonic",
]
