[package]
name = "events"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = {workspace = true, optional = true}
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cosmos-proto = { workspace = true, optional = true }
hex.workspace = true
koit-toml = { version = "=0.2.1", optional = true }
opentelemetry = { workspace = true, features = ["metrics" ], optional = true }
retrying = { version = "0.1.0", features = ["tokio"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tonic = { workspace = true, features = ["transport","tls","tls-roots"], optional = true }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true
tfhe-versionable.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
mockall.workspace = true
quickcheck = "1.0.3"
quickcheck_macros = "1"
test-context = "0.3.0"
backward-compatibility = { workspace = true, features = ["load", "tests"] }
kms-common = { workspace = true, features = ["testing"] }

[features]
default = []
subscription = [
    "dep:async-trait",
    "dep:cosmos-proto",
    "dep:koit-toml",
    "dep:opentelemetry",
    "dep:retrying",
    "dep:thiserror",
    "dep:tokio",
    "dep:tonic",
]
