[package]
name = "events"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true, optional = true }
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cosmos-proto = { workspace = true, optional = true }
hex.workspace = true
kms-common.workspace = true
koit-toml = { version = "=0.2.1", optional = true }
opentelemetry = { workspace = true, features = ["metrics" ], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tonic = { workspace = true, features = [
    "transport",
    "tls",
    "tls-roots",
], optional = true }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true
tfhe-versionable.workspace = true
kms-grpc = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
mockall.workspace = true
quickcheck = "=1.0.3"
quickcheck_macros = "=1.0.0"
test-context = "=0.3.0"
backward-compatibility = { workspace = true, features = ["load", "tests"] }
kms-common = { workspace = true, features = ["testing"] }

[features]
default = []
non-wasm = [
    "dep:kms-grpc",
] # We don't want the kms to be included in the smart contract as it requires protoc
subscription = [
    "dep:async-trait",
    "dep:cosmos-proto",
    "dep:koit-toml",
    "dep:opentelemetry",
    "dep:thiserror",
    "dep:tokio",
    "dep:tonic",
]
