[package]
name = "gateway"
version = "0.8.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
actix-web = "4.6.0"
aes-prng = "0.2.1"
alloy-primitives = "0.7.6"
alloy-signer = "0.1.3"
alloy-signer-local = "0.1.3"
alloy-sol-types = "0.7.6"
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
byteorder = "1.5.0"
conf-trace = { path = "../../conf-trace" , version = "0.8.0" }
cosmos-proto = { path = "../cosmos-proto" , version = "0.8.0" }
cosmwasm-std = { version = "2.0.2" }
dashmap = "6.0.1"
deep_space = "2.24.1"
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws", "ethers-solc", "legacy"] }
events = { path = "../events", features = ["subscription"] , version = "0.8.0" }
eyre = "0.6.12"
futures = "0.3"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.3"
kms = { path = "../../core/service", default-features = false, features = ["grpc-client"] , version = "0.8.0" }
kms-blockchain-client = { path = "../client" , version = "0.8.0" }
kms-blockchain-connector = { path = "../connector" , version = "0.8.0" }
prost.workspace = true
rand.workspace = true
reqwest = { version = "0.12.4", features = ["json"] }
retrying = "0.1.0"
secp256k1 = "0.29.0"
serde = { workspace = true , features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
sha3 = "0.10.8"
structopt = "0.3.26"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tendermint = "0.37.0"
tendermint-rpc = { version = "0.37.0", features = ["websocket-client"] }
thiserror = "1.0.61"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true

[dev-dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
rand.workspace = true
serial_test = "3.1.1"
temp-env = "0.3"
