[package]
name = "gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
aes-prng.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
byteorder = "=1.5.0"
clap.workspace = true
conf-trace.workspace = true
cosmos-proto.workspace = true
cosmwasm-std.workspace = true
dashmap = {version = "=6.1.0", features = ["serde"]}
deep_space = "=2.26.0"
ethers = { version = "=2.0.14", features = ["abigen", "rustls", "ws", "ethers-solc", "legacy"] }
events = { workspace = true, features = ["subscription"] }
eyre = "=0.6.12"
futures.workspace = true
hex.workspace = true
hmac = "=0.12.1"
k256.workspace = true
kms-grpc = { workspace = true }
kms-common = { workspace = true }
kms-blockchain-client.workspace = true
kms-blockchain-connector.workspace = true
prost.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
secp256k1.workspace = true
serde = { workspace = true , features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
tendermint-rpc = { workspace = true, features = ["websocket-client"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-actix-web.workspace = true
typed-builder.workspace = true
tonic.workspace = true
primitive-types = { version = "=0.12.2", default-features = false }
ethereum-inclusion-proofs = { path = "../inclusion_proofs/ethereum" }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
rand.workspace = true
temp-env = "=0.3.6"
