[package]
name = "proofs"
version = "0.4.5"
edition.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
bincode = "~1.3"
tendermint = "0.37"
tendermint-rpc = { version = "0.37.0", features = [ "http-client" ] }
tendermint-proto = "0.37.0"
percent-encoding = "2.1"
ics23 = "0.11.1"
prost = "0.12.3"
anyhow = "1.0.81"
serde = { version = "~1.0", features = ["derive", "rc"] }
serde_json = "1.0"
base64 = "0.22.1"

[dev-dependencies]
rand = "0.8.4"
