[package]
name = "proofs"
version = "0.8.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bincode.workspace = true
hex = { version = "0.4.3", features = ["serde"] }
ics23 = "0.11.1"
percent-encoding = "2.1"
prost.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = "1.0"
tendermint = "0.37"
tendermint-proto = "0.37.0"
tendermint-rpc = { version = "0.37.0", features = [ "http-client" ] }

[dev-dependencies]
rand.workspace = true
