[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0", default-features = false }
prost = { version = "0.12", default-features = false }
tendermint = "0.35"
tendermint-abci = "0.35"
tendermint-proto = "0.35"
structopt = { version = "0.3" }
tracing-subscriber = { version = "0.3"}
tracing = { version = "0.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
