[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tendermint = "0.35"
tendermint-abci = { version = "0.35", features = ["client"] }
tendermint-proto = "0.35"
structopt = { version = "0.3" }
tracing-subscriber = { version = "0.3"}
tracing = { version = "0.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
once_cell = "1.19.0"
serde = "1.0.197"
serde_derive = "1.0.197"
prost = "0.12"
prost-types = "0.12"
bincode = "1.3.3"
sha2 = "0.10.8"
secp256k1 = { version = "0.29.0", features = ["rand-std", "global-context"] }
rand = "0.8.4"
sha3 = "0.10.8"
hashes = { package = "bitcoin_hashes", version = ">= 0.12, <= 0.14", default-features = false }
hex = "0.4.3"
reqwest = "0.12.3"

[build-dependencies]
prost-build = "0.12"
