[package]
name = "simulator"
version = "0.9.0-rc21"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
# Inherited from repository root Cargo.toml

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/bin.rs"

[dependencies]
aes-prng = "0.2.1"
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
bytes = "^1.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
async-trait.workspace = true
thiserror = "1.0.64"
ethers = { version = "2.0.14", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
    "legacy",
] }
dashmap = "6.0.1"
retrying = { version = "0.1.0", features = ["tokio"] }
typed-builder.workspace = true
anyhow.workspace = true
cosmwasm-std = { version = "2.1.4" }
cosmwasm-crypto = "2.1.4"
ripemd = "0.1.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
bip39 = "2.0.0"
bech32 = "0.9.0"
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
conf-trace = { path = "../../conf-trace", version = "0.9.0-rc21" }
cosmos-proto = { path = "../cosmos-proto", version = "0.9.0-rc21" }
distributed-decryption = { path = "../../core/threshold", default-features = false, version = "0.9.0-rc21" }
events = { path = "../events", version = "0.9.0-rc21" }
hex = "0.4.3"
kms = { path = "../../core/service", default-features = false, features = [
    "grpc-client",
    "non-wasm",
    "testing",
    "insecure",
], version = "0.9.0-rc21" }
kms-blockchain-client = { path = "../client", version = "0.9.0-rc21" }
rand = { workspace = true, features = ["std", "std_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
tfhe = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }

[dev-dependencies]
test-context = "0.3.0"
tests-utils = { path = "./tests-utils" }
serial_test = "3.1.1"
