[package]
name = "simulator"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
# Inherited from repository root Cargo.toml

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/bin.rs"

[dependencies]
aes-prng.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
alloy-signer.workspace = true
alloy-signer-local.workspace = true
bytes = "^1.6.1"
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
ethers = { version = "2.0.14", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
    "legacy",
] }
dashmap = "6.0.1"
retrying = { version = "0.1.0", features = ["tokio"] }
typed-builder.workspace = true
anyhow.workspace = true
cosmwasm-std.workspace = true
bech32 = "0.9.0"
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
conf-trace.workspace = true
cosmos-proto.workspace = true
events.workspace = true
hex.workspace = true
kms = { workspace = true, default-features = false, features = [
    "grpc-client",
    "non-wasm",
    "testing",
    "insecure",
]}
kms-blockchain-client.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tfhe.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true, features = ["log"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }

[dev-dependencies]
test-context = "0.3.0"
tests-utils = { path = "./tests-utils" }
serial_test = "3.1.1"
