[package]
name = "kms-backup"
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aws-lc-rs = "=1.12.0"
bincode.workspace = true
distributed-decryption = { workspace = true, default-features = false }
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
aes-prng.workspace = true
proptest = "=1.5.0"