[package]
name = "kms-backup"
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aws-lc-rs = "=1.13.0"
bincode.workspace = true
threshold-fhe = { workspace = true, default-features = false, features = ["extension_degree_4"] }
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
aes-prng.workspace = true
proptest = "=1.6.0"