[package]
name = "kms-core-backward-compatibility"
version = "0.9.0-rc3"
publish = false
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
# This is a list of kms-core versions we will generate data for. This list will grow over time.
# They are only activated when generating data, with the binary target and the "generate" feature.
kms_0_9 = { git = "ssh://git@github.com/zama-ai/kms-core.git", package = "kms", rev = "42e42497ec953c56b1650655e056ca3f7f8f4f20", optional = true }
distributed_decryption_0_9 = { git = "ssh://git@github.com/zama-ai/kms-core.git", package = "distributed-decryption", rev = "42e42497ec953c56b1650655e056ca3f7f8f4f20", optional = true, features = ["testing"] }

# Dependencies for the 0.9 version
# Note: these dependencies should match the versions used by the KMS and distributed decryption
# modules as much as possible to avoid serialization differences
tfhe_versionable_0_2 = { git = "https://github.com/zama-ai/tfhe-rs.git", package = "tfhe-versionable", tag = "tfhe-rs-0.8.0", optional = true }
tfhe_0_8 = { git = "https://github.com/zama-ai/tfhe-rs.git", package = "tfhe", tag = "tfhe-rs-0.8.0", optional = true , features = ["shortint"]}
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", optional = true }
ron = { version = "0.8", features = ["integer128"] }
bincode = "1.3"
aes-prng = "0.2.1"
rand = "0.8.5"
anyhow = "1.0.86"
tokio = { version = "1.37", features = ["full"] }

[[bin]]
name = "kms-core-backward-compatibility"
required-features = ["generate"]

# Note: The `generate` feature should not be put by default to avoid dependency conflicts.
[features]
generate = ["dep:kms_0_9", "dep:distributed_decryption_0_9", "dep:tfhe_versionable_0_2", "dep:tfhe_0_8"]
load = ["dep:semver"]
tests = []